# kanibal

./: .gitignore  README.md  pyproject.toml
src/kanibal/: __init__.py  __main__.py  cli.py  dates.py  match.py  models.py  parser.py  render.py  storage.py
tests/: test_cli.py  test_match.py  test_parser.py  test_render.py  test_storage.py
