[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kanibal"
version = "0.1.0"
description = "Personal CLI Kanban backed by a single markdown file."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
kanibal = "kanibal.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
